// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostItCard component renders correctly 1`] = `
<div>
  <div
    class="ColorPair ColorPair--pearl"
  >
    <div
      class="PostItCard"
    >
      <div
        class="section"
      >
        <h4
          class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
        >
          Heading 1
        </h4>
        <div
          class="content"
        >
          Content
        </div>
        <div
          class="action"
        >
          Action
        </div>
      </div>
      <div
        class="section"
      >
        <h4
          class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
        >
          Heading 2
        </h4>
        <div
          class="content"
        >
          Content
        </div>
        <div
          class="action"
        >
          Action
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostItCard component renders with different color pair 1`] = `
<div>
  <div
    class="ColorPair ColorPair--blue-900"
  >
    <div
      class="PostItCard"
    >
      <div
        class="section"
      >
        <h4
          class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
        >
          Heading 1
        </h4>
        <div
          class="content"
        >
          Content
        </div>
        <div
          class="action"
        >
          Action
        </div>
      </div>
      <div
        class="section"
      >
        <h4
          class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
        >
          Heading 2
        </h4>
        <div
          class="content"
        >
          Content
        </div>
        <div
          class="action"
        >
          Action
        </div>
      </div>
    </div>
  </div>
</div>
`;
